completed item similarity

--- a/config/config.tex
+++ b/config/config.tex
@@ -5,6 +5,7 @@
 \usepackage{array}
 \usepackage{changepage}
 \usepackage{colortbl}
+\usepackage{diagbox}
 \usepackage{fancyhdr}
 \usepackage{float}
 \usepackage{fontspec}
