--- a/includes/references.bib
+++ b/includes/references.bib
@@ -48,3 +48,10 @@
     PUBLISHER = {Springer US},
     YEAR      = {2011}
 }
+
+@BOOK{segaran07,
+    AUTHOR    = {Segaran, Toby},
+    TITLE     = {Programming Collective Intelligence: Building Smart Web 2.0 Applications},
+    PUBLISHER = {O'Reilly Media, Inc.},
+    YEAR      = {2007}
+}
