added references, added recommendation query paragraph, added percona note

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -55,3 +55,307 @@
     PUBLISHER = {O'Reilly Media, Inc.},
     YEAR      = {2007}
 }
+
+
+
+
+@MISC{mahout,
+    AUTHOR       = {{Apache Mahout}},
+    HOWPUBLISHED = {https://mahout.apache.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2009-2014}
+}
+@MISC{expressjs,
+    AUTHOR       = {{express}},
+    HOWPUBLISHED = {http://expressjs.com},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{nodejs,
+    AUTHOR       = {{node.js}},
+    HOWPUBLISHED = {http://nodejs.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{json,
+    AUTHOR       = {{JavaScript Object Notation (JSON)}},
+    HOWPUBLISHED = {http://www.json.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{xml,
+    AUTHOR       = {{Extensible Markup Language (XML)}},
+    HOWPUBLISHED = {http://www.w3.org/XML/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{httpvocabulary,
+    AUTHOR       = {{HTTP Vocabulary in RDF 1.0}},
+    HOWPUBLISHED = {http://www.w3.org/TR/HTTP-in-RDF10/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{amqp,
+    AUTHOR       = {{Advanced Message Queuing Protocol (AMQP)}},
+    HOWPUBLISHED = {http://www.amqp.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{rabbitmq,
+    AUTHOR       = {{RabbitMQ}},
+    HOWPUBLISHED = {https://www.rabbitmq.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{neo4j,
+    AUTHOR       = {{Neo4j}},
+    HOWPUBLISHED = {http://www.neo4j.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{git,
+    AUTHOR       = {{Git}},
+    HOWPUBLISHED = {http://git-scm.com/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{virtualbox,
+    AUTHOR       = {{VirtualBox}},
+    HOWPUBLISHED = {https://www.virtualbox.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{golang,
+    AUTHOR       = {{Go}},
+    HOWPUBLISHED = {http://golang.org/},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{magento,
+    AUTHOR       = {{Magento}},
+    HOWPUBLISHED = {http://magento.com/products/overview},
+    NOTE         = {Accessed April 07, 2014},
+    YEAR         = {2014}
+}
+@MISC{vmware,
+    AUTHOR       = {{VMWare Fusion}},
+    HOWPUBLISHED = {http://www.vmware.com/uk/products/fusion},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{celery,
+    AUTHOR       = {{Celery}},
+    HOWPUBLISHED = {http://www.celeryproject.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{flower,
+    AUTHOR       = {{Flower}},
+    HOWPUBLISHED = {http://flower.readthedocs.org/en/latest/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{lenskit,
+    AUTHOR       = {{LensKit}},
+    HOWPUBLISHED = {http://lenskit.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{python,
+    AUTHOR       = {{Python}},
+    HOWPUBLISHED = {https://www.python.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{pip,
+    AUTHOR       = {{pip}},
+    HOWPUBLISHED = {https://pypi.python.org/pypi/pip},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{flask,
+    AUTHOR       = {{Flask}},
+    HOWPUBLISHED = {http://flask.pocoo.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{apache,
+    AUTHOR       = {{Apache}},
+    HOWPUBLISHED = {http://httpd.apache.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{wsgi,
+    AUTHOR       = {{Web Server Gateway Interface (WSGI)}},
+    HOWPUBLISHED = {http://wsgi.readthedocs.org/en/latest/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{beanstalk,
+    AUTHOR       = {{Beanstalk}},
+    HOWPUBLISHED = {http://kr.github.io/beanstalkd/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{xsd,
+    AUTHOR       = {{XML Schema Definition (XSD)}},
+    HOWPUBLISHED = {http://www.w3.org/TR/xmlschema11-1/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{nosetests,
+    AUTHOR       = {{nosetests}},
+    HOWPUBLISHED = {https://nose.readthedocs.org/en/latest/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{travisci,
+    AUTHOR       = {{Tavis CI}},
+    HOWPUBLISHED = {https://travis-ci.org},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{scrutinizer,
+    AUTHOR       = {{Scrutinizer}},
+    HOWPUBLISHED = {https://scrutinizer-ci.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{github,
+    AUTHOR       = {{GitHub}},
+    HOWPUBLISHED = {https://github.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{php,
+    AUTHOR       = {{PHP: Hypertext Preprocessor (PHP)}},
+    HOWPUBLISHED = {http://www.php.net/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{silex,
+    AUTHOR       = {{Silex}},
+    HOWPUBLISHED = {http://silex.sensiolabs.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{doctrineodm,
+    AUTHOR       = {{Doctrine MongoDB Object Document Manager (ODM)}},
+    HOWPUBLISHED = {http://doctrine-mongodb-odm.readthedocs.org/en/latest/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{mongodb,
+    AUTHOR       = {{MongoDB}},
+    HOWPUBLISHED = {https://www.mongodb.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{mysql,
+    AUTHOR       = {{MySQL}},
+    HOWPUBLISHED = {https://www.mysql.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{percona,
+    AUTHOR       = {{Percona Server}},
+    HOWPUBLISHED = {https://www.percona.com/software/mysql-database/percona-server},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{phpunit,
+    AUTHOR       = {{PHPUnit}},
+    HOWPUBLISHED = {https://phpunit.de/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{magento2,
+    AUTHOR       = {{Magento2}},
+    HOWPUBLISHED = {https://github.com/magento/magento2},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{composer,
+    AUTHOR       = {{Composer}},
+    HOWPUBLISHED = {https://getcomposer.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{vagrant,
+    AUTHOR       = {{Vagrant}},
+    HOWPUBLISHED = {https://www.vagrantup.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{ruby,
+    AUTHOR       = {{Ruby}},
+    HOWPUBLISHED = {https://www.ruby-lang.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{ubuntu,
+    AUTHOR       = {{Ubuntu}},
+    HOWPUBLISHED = {http://www.ubuntu.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{hashicorp,
+    AUTHOR       = {{HashiCorp}},
+    HOWPUBLISHED = {https://hashicorp.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{atlas,
+    AUTHOR       = {{Atlas}},
+    HOWPUBLISHED = {https://atlas.hashicorp.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{puppet,
+    AUTHOR       = {{Puppet by PuppetLabs}},
+    HOWPUBLISHED = {https://puppetlabs.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{puppetforge,
+    AUTHOR       = {{PuppetForge}},
+    HOWPUBLISHED = {https://forge.puppetlabs.com},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{supervisor,
+    AUTHOR       = {{Supervisor}},
+    HOWPUBLISHED = {http://supervisord.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{chef,
+    AUTHOR       = {{Chef}},
+    HOWPUBLISHED = {https://www.chef.io/chef/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{saltstack,
+    AUTHOR       = {{SaltStack}},
+    HOWPUBLISHED = {http://saltstack.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{ansible,
+    AUTHOR       = {{Ansible}},
+    HOWPUBLISHED = {http://www.ansible.com/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{yum,
+    AUTHOR       = {{Yum}},
+    HOWPUBLISHED = {http://yum.baseurl.org/},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
+@MISC{apt,
+    AUTHOR       = {{Apt}},
+    HOWPUBLISHED = {https://wiki.debian.org/Apt},
+    NOTE         = {Accessed September 12, 2015},
+    YEAR         = {2015}
+}
