--- a/config/config.tex
+++ b/config/config.tex
@@ -54,3 +54,5 @@
 \definecolor{greybg}{rgb}{0.95,0.95,0.95}
 \setminted{fontsize=\scriptsize,bgcolor=greybg,numbersep=6pt,baselinestretch=1.2,breaklines=true}
 \AfterEndEnvironment{minted}{\vspace{3mm}}
+
+%TC:envir minted [ignore] xall
