added testing chapter

--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -1,51 +1,8 @@
-\chapter{Evaluating Achievement of Objectives}
+\chapter{Evaluation}
 
-\emph{Status: Not Started}
+\section{Development of an Integration Framework}
 
-\section{Multi-Purpose \& Interoperability}
+\section{Development of Two Distinct Recommender Engines}
 
-\emph{Status: Not Started}
+\section{Integration Into a Demo Application}
 
-\subsubsection{Interoperability of the recommendation queries}
-
-\emph{Status: Not Started}
-
-\subsubsection{Interoperability of the user and domain models}
-
-\emph{Status: Not Started}
-
-\subsubsection{Interoperability of the recommendation results}
-
-\emph{Status: Not Started}
-
-\section{Abstraction}
-
-\emph{Status: Not Started}
-
-\subsubsection{Complexity}
-
-\emph{Status: Not Started}
-
-\subsubsection{Dependency}
-
-\emph{Status: Not Started}
-
-\subsubsection{Encapsulation}
-
-\emph{Status: Not Started}
-
-\subsubsection{Database Abstraction}
-
-\emph{Status: Not Started}
-
-\subsubsection{Reusability}
-
-\emph{Status: Not Started}
-
-\section{Ease of integration}
-
-\emph{Status: Not Started}
-
-\section{Technological Unbiasedness}
-
-\emph{Status: Not Started}
