--- a/index.tex
+++ b/index.tex
@@ -15,6 +15,7 @@
 \input{./sections/introduction.tex}
 \input{./sections/architecture.tex}
 \input{./sections/implementation.tex}
+\input{./sections/testing.tex}
 \input{./sections/evaluation.tex}
 \input{./sections/conclusion.tex}
 \input{./sections/references.tex}
